clusters/aks-ninja-dev-06/apollo/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: apollo
  labels:
    provisioncertificate: "yes"
